# kazetenn_scraper

./: .gitignore  README.md  archiver.py  kazetenn_scraper.py  merger.rb  pyproject.toml
firefox_extensions/: har_export_trigger-0.6.2resigned1.xpi
