[tool.poetry]
name = "kazetenn-scraper"
version = "0.1.0"
description = ""
authors = ["Erwan Keribin <erwan.keribin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
pendulum = "^3.0.0"
pypdf = "^5.0.1"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120
disable = "missing-module-docstring, missing-class-docstring, missing-function-docstring"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
